Fix markdown toolbar spacing

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -181,9 +181,6 @@
             position: relative;
             .cp-markdown-toggle-button {
                 .markdown-toolbar-button-style();
-                &.cp-toolbar-button-active {
-                    //background-color: transparent !important;
-                }
             }
         }
 
@@ -855,7 +852,6 @@
                     }
                     .cp-markdown-toolbar {
                         display: block;
-                        padding: 0.1rem 0;
                         border-radius: @variables_radius 0;
                         width: 100%;
                         background-color: transparent;
