--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -157,12 +157,6 @@
             background-color: transparent;
             color: @cp_kanban-fg;
             border-radius: @variables_radius @variables_radius 0px 0px;
-            button {
-                &:hover {
-                    background-color: @cp_kanban-fg;
-                    color: @cp_kanban-conflict-bg;
-                }
-            }
             .btn {
             outline: 0;
             border-radius: @variables_radius;
